--- a/bd/docker-compose.yml
+++ b/bd/docker-compose.yml
@@ -33,20 +33,21 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     depends_on:
       primary:
         condition: service_healthy
     ports:
-      - "${REPLICA_PORT}:5432"
+      - "${REPLICA_PORT}:5432"  # Asegura que el puerto REPLICA_PORT esté expuesto correctamente
     volumes:
       - replica_data:/var/lib/postgresql/data
       - ./replica/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./replica/pg_hba.conf:/etc/postgresql/pg_hba.conf
       - ./replica/setup_replica.sh:/docker-entrypoint-initdb.d/setup_replica.sh
     command:
-      bash -c "/docker-entrypoint-initdb.d/setup_replica.sh && postgres"
+      bash -c "/docker-entrypoint-initdb.d/setup_replica.sh && postgres -c config_file=/etc/postgresql/postgresql.conf"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
