--- a/bd/replica/pg_hba.conf
+++ b/bd/replica/pg_hba.conf
@@ -5,6 +5,12 @@ local   all             all                                     trust
 host    all             all             127.0.0.1/32            trust
 host    all             all             ::1/128                 trust
 
+# Permitir acceso desde la red Docker (rango adicional 172.18.0.0/16)
+host    all             all             172.18.0.0/16           md5
+
+# Permitir acceso desde la red Docker (rango 172.19.0.0/16)
+host    all             all             172.19.0.0/16           md5
+
 # Permitir conexiones para replicación desde cualquier IP con autenticación md5
 host    replication     all             0.0.0.0/0               md5
 
