--- a/bd/docker-compose.yml
+++ b/bd/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - primary_data:/var/lib/postgresql/data
       - ./primary/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./primary/pg_hba.conf:/etc/postgresql/pg_hba.conf
-      - ./primary/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./primary/script_init:/docker-entrypoint-initdb.d/script_init
       - ./primary/setup_primary.sh:/docker-entrypoint-initdb.d/setup_primary.sh
     command:
       bash -c "/docker-entrypoint-initdb.d/setup_primary.sh && postgres -c config_file=/etc/postgresql/postgresql.conf"
