--- a/micronfronts/zeus_siges/zeus_siges_mf_header/package.json
+++ b/micronfronts/zeus_siges/zeus_siges_mf_header/package.json
@@ -6,14 +6,23 @@
     "start": "webpack serve --open"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@types/axios": "^0.9.36",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "babel-loader": "^9.2.1",
+    "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "typescript": "^5.7.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
