--- a/bd/zeus_db/docker/zeus_db_identity_provider/postgresql.conf
+++ b/bd/zeus_db/docker/zeus_db_identity_provider/postgresql.conf
@@ -3,16 +3,17 @@
 # ==============================
 listen_addresses = '*'    # Permitir conexiones externas
 hba_file = '/etc/postgresql/pg_hba.conf'  # Ubicación del archivo de configuración de acceso
+password_encryption = 'md5'  # Forzar encriptación de contraseñas en formato MD5
 
 # ==============================
 # 🔄 Configuración de Replicación
 # ==============================
-wal_level = replica       # Activar nivel de replicación
+wal_level = replica       # Activar nivel de replicación # Activar Change Data Capture (CDC)
 synchronous_commit = on   # Garantiza durabilidad en escritura WAL
 synchronous_standby_names = ''  # Vacío para replicación asíncrona
 max_wal_senders = 10      # Máximo número de conexiones de replicación
 max_replication_slots = 5 # Máximo número de slots de replicación
-wal_keep_size = 256MB     # Retener WALs para evitar que la réplica se quede atrás
+wal_keep_size = 512MB     # Retener WALs para evitar que la réplica se quede atrás
 wal_compression = on      # Reducir uso de ancho de banda en replicación
 hot_standby = on          # Permitir consultas en la réplica
 
@@ -64,7 +65,4 @@ log_replication_commands = on  # Registrar comandos de replicación
 # ==============================
 # ⚡ Configuración Avanzada
 # ==============================
-autovacuum = on            # Mantener la base de datos optimizada automáticamente
-autovacuum_naptime = 60s   # Intervalo entre ejecuciones de autovacuum
-vacuum_cost_delay = 2ms   # Reducir impacto de vacuum en rendimiento
 random_page_cost = 1.1     # Ajuste para consultas en SSDs
