--- a/bd/zeus_db/docker/zeus_db_identity_provider/replica/pg_hba.conf
+++ b/bd/zeus_db/docker/zeus_db_identity_provider/replica/pg_hba.conf
@@ -5,15 +5,12 @@
 # 🔹 Permitir conexiones locales sin contraseña (solo para localhost)
 local   all             all                                     trust
 
-# 🔹 Permitir conexiones locales IPv4 e IPv6
-host    all             all             127.0.0.1/32            trust
-host    all             all             ::1/128                 trust
-
 # 🔹 Permitir conexiones desde la red interna de Docker
 host    all             all             172.16.0.0/12           md5
 
 # 🔹 Permitir conexiones de replicación desde cualquier IP con autenticación md5
-host    replication     replicator       0.0.0.0/0               md5
+host    replication     all             0.0.0.0/0               md5
 
 # 🔹 Permitir acceso general desde cualquier IP con autenticación md5 (seguridad básica)
 host    all             all             0.0.0.0/0               md5
+
